--- a/style.css
+++ b/style.css
@@ -63,8 +63,8 @@ body {
 .siteContainer {
 	height: 100vh;
 	display: grid;
-	grid-template-columns: minmax(250px, 300px) 1fr minmax(350px, 400px);
-	grid-template-rows: minmax(150px, 165px) 1fr 1fr;
+	grid-template-columns: minmax(200px, 250px) 1fr minmax(350px, 400px);
+	grid-template-rows: minmax(168px, 168px) 1fr 1fr;
 }
 
 .sidebarContainer {
@@ -83,6 +83,8 @@ body {
 	grid-column-start: 2;
 	grid-column-end: 4;
 	background-color: rgb(90, 73, 74);
+	min-width: 900px;
+	min-height: 160px;
 	display: grid;
 	grid-template-columns: 1fr minmax(100px, 500px) 1fr 1fr minmax(100px, 150px);
 }
@@ -96,19 +98,48 @@ body {
 .sideContentContainer {
 	grid-area: 2 / 3 / 4 / 4;
 	background-color: rgb(58, 88, 58);
+	display: grid;
+	grid-template-rows: 32px 1fr 64px 1fr;
+	padding: 32px;
+	min-height: 750px;
+	overflow: hidden;
+}
+
+.announcementsContainer{
+	background-color: #178ef7;
+	padding: 32px;
+	border-radius: 16px;
+
+}
+.announcementsList{
+	height: 100%;
+	display: grid;
+	grid-template-rows: 1fr 1fr 1fr;
+}
+.trendingContainer {
+	background-color: #178ef7;
+	padding: 32px;
+	border-radius: 16px;
+}
+
+.trendingList {
+	height: 100%;
+	display: grid;
+	grid-template-rows: 1fr 1fr 1fr 1fr;
+	grid-template-columns: 80px 1fr;
+	align-items: center;
 }
 
 .sidebarIcon {
-	width: 28px;
-	height: 28px;
+	width: 36px;
+	height: 36px;
 	padding-left: 6px;
 }
 
 .headerIcon {
-	width: 45px;
-	height: 45px;
+	width: 48px;
+	height: 48px;
 	align-self: center;
-	
 }
 
 .searchContainer {
@@ -134,7 +165,7 @@ body {
 	grid-area: 2 / 1 / 3 / 3;
 	gap: 8px;
 	padding-left: 32px;
-	padding-bottom: 16px;
+
 	font-size: 12rem;
 	display: grid;
 	grid-template-rows: 40px 40px;
@@ -154,7 +185,7 @@ input {
 }
 
 button {
-	min-width: 130px;
+	min-width: 120px;
 	height: 45px;
 	border-radius: 32px;
 	border-style: none;
@@ -163,8 +194,11 @@ button {
 .buttonContainer {
 	grid-area: 2 / 3 / 3 / 6;
 	display: flex;
-	align-items: center;
-	justify-content: space-around;
+	align-items: flex-end;
+	justify-content: flex-end;
+	gap: 16px;
+	padding-right: 16px;
+	padding-bottom: 16px;
 }
 
 .gap {
@@ -183,15 +217,18 @@ h2 {
 .userIconSmall {
 border-radius: 50%;
 overflow: hidden;
-max-width: 50px;
-max-height: 50px;
+min-height: 60px;
+max-height: 60px;
+min-width: 60px;
+max-width: 60px;
+
 }
 
 .userIconMain {
 	border-radius: 50%;
 	overflow: hidden;
-	max-width: 75px;
-	max-height: 75px;
+	max-width: 80px;
+	max-height: 80px;
 	grid-area: 1 / 1 / 3 / 2;
 	align-self: center;
 	}
@@ -212,4 +249,10 @@ h1 {
 
 h3 {
 	font-size: 1.8rem;
+	align-self: flex-end;
 }
+
+li > p{
+	font-size: 1rem;
+}
+
