--- a/style.css
+++ b/style.css
@@ -50,6 +50,15 @@ a {
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
+
+:root {
+	--red: #5AC3B0;
+	--green: #DE5935;
+	--yellow: #F7CD46; 
+	--white: #fafafa;
+	--grey: #dddde2;
+
+}
 @font-face {
 	font-family: 'roboto';
 	src: url(Roboto-Regular.ttf) format('truetype');
@@ -63,14 +72,14 @@ body {
 .siteContainer {
 	height: 100vh;
 	display: grid;
-	grid-template-columns: minmax(250px, 250px) 1fr minmax(350px, 400px);
+	grid-template-columns: minmax(300px, 300px) 1fr minmax(350px, 400px);
 	grid-template-rows: minmax(168px, 168px) 1fr 1fr;
 }
 
 .sidebarContainer {
 	grid-row-start: 1;
 	grid-row-end: 4;
-	background-color: #178ef7;
+	background-color: var(--green);
 	display: grid;
 	grid-template-rows: repeat(12, 50px);
 	grid-template-columns: 50px 1fr;
@@ -82,7 +91,7 @@ body {
 .headerContainer {
 	grid-column-start: 2;
 	grid-column-end: 4;
-	background-color: rgb(192, 75, 75);
+	background-color: var(--white);
 	min-width: 900px;
 	min-height: 160px;
 	display: grid;
@@ -91,25 +100,26 @@ body {
 
 .contentContainer {
 	grid-area: 2 / 2 / 4 / 3;
-	background-color: rgb(228, 232, 255);
-	overflow: auto;
+	background-color: var(--grey);
 	display: grid;
 	width: auto;
+	overflow: auto;
 	padding: 32px;
 	gap: 32px;
 	grid-template-columns: repeat(auto-fill, clamp(312px, 20vw, 380px));
 	grid-template-rows: 24px repeat(auto-fill, clamp(280px, 33%, 320px));
+	box-shadow: #888888 0px 5px 5px 0px inset;
 }
 
 .sideContentContainer {
 	grid-area: 2 / 3 / 4 / 4;
-	background-color: rgb(58, 88, 58);
 	display: grid;
 	grid-template-rows: 32px 1fr 64px 1fr;
 	padding: 32px;
 	min-height: 750px;
 	overflow: hidden;
-	background-color: rgb(228, 232, 255);
+	background-color: var(--grey);
+	box-shadow: #888888 0px 5px 5px 0px inset;
 }
 
 .projectHeadingText {
@@ -122,10 +132,10 @@ align-self: flex-start;
 }
 
 .announcementsContainer{
-	background-color: #178ef7;
+	background-color: var(--green);
 	padding: 32px;
 	border-radius: 16px;
-	box-shadow: 0 4px 0 rgb(192, 75, 75);
+	box-shadow: 0 4px 0 var(--red), 5px 10px 8px #888888;
 
 }
 .announcementsList{
@@ -134,10 +144,10 @@ align-self: flex-start;
 	grid-template-rows: 1fr 1fr 1fr;
 }
 .trendingContainer {
-	background-color: #178ef7;
+	background-color: var(--green);
 	padding: 32px;
 	border-radius: 16px;
-	box-shadow: 0 4px 0 rgb(192, 75, 75);
+	box-shadow: 0 4px 0 var(--red), 5px 10px 8px #888888;
 }
 
 .trendingList {
@@ -199,7 +209,7 @@ input {
 	border-radius: 16px;
 	border-style: none;
 	border-color: none;
-	background-color: rgb(228, 232, 255);
+	background-color: var(--grey);
 }
 
 button {
@@ -208,7 +218,8 @@ button {
 	border-radius: 32px;
 	border-style: none;
 	border-color: none;
-	background-color: rgb(228, 232, 255);
+		background-color: var(--red);
+		box-shadow: 2px 2px 8px #070101;;
 }
 .buttonContainer {
 	grid-area: 2 / 3 / 3 / 6;
@@ -280,13 +291,13 @@ li > p{
 }
 
 .card {
- background-color: rgb(192, 75, 75);
+ background-color: var(--red);
  padding: 32px;
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  justify-content: center;
- box-shadow: 0 4px 0 #178ef7;
+ box-shadow: 0 4px 0 var(--green), 5px 10px 8px #888888;
 }
 
 .cardIcons {
