--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
 .siteContainer {
 	height: 100vh;
 	display: grid;
-	grid-template-columns: minmax(300px, 300px) 1fr minmax(350px, 400px);
+	grid-template-columns: minmax(360px, 360px) 1fr minmax(350px, 400px);
 	grid-template-rows: minmax(168px, 168px) 1fr 1fr;
 }
 
@@ -81,17 +81,17 @@ body {
 	grid-row-end: 4;
 	background-color: var(--green);
 	display: grid;
-	grid-template-rows: repeat(12, 50px);
-	grid-template-columns: 50px 1fr;
+	grid-template-rows: repeat(12, 88px);
+	grid-template-columns: 64px 1fr;
 	align-items: end;
-	padding-left: 16px;
-	padding-top: 16px;
+	padding-left: 32px;
+	padding-top: 32px;
 }
 
 .headerContainer {
 	grid-column-start: 2;
 	grid-column-end: 4;
-	background-color: var(--white);
+	background-color: var(--green);
 	min-width: 900px;
 	min-height: 160px;
 	display: grid;
@@ -108,7 +108,7 @@ body {
 	gap: 32px;
 	grid-template-columns: repeat(auto-fill, clamp(312px, 20vw, 380px));
 	grid-template-rows: 24px repeat(auto-fill, clamp(280px, 33%, 320px));
-	box-shadow: #888888 0px 5px 5px 0px inset;
+	box-shadow: inset 0 5px 5px -1px #888888, inset 5px 0 5px -1px #888888;
 }
 
 .sideContentContainer {
@@ -119,7 +119,7 @@ body {
 	min-height: 750px;
 	overflow: hidden;
 	background-color: var(--grey);
-	box-shadow: #888888 0px 5px 5px 0px inset;
+	box-shadow: inset 0 5px 5px -1px #888888;
 }
 
 .projectHeadingText {
@@ -159,14 +159,14 @@ align-self: flex-start;
 }
 
 .sidebarIcon {
-	width: 36px;
-	height: 36px;
+	width: 48px;
+	height: 48px;
 	padding-left: 6px;
 }
 
 .headerIcon {
-	width: 48px;
-	height: 48px;
+	width: 60px;
+	height: 60px;
 	align-self: center;
 }
 
@@ -236,7 +236,7 @@ button {
 }
 
 p {
-	font-size: 1.6rem;
+	font-size: 2.4rem;
 }
 
 h2 {
@@ -265,7 +265,7 @@ max-width: 60px;
 
 
 h1 {
-	font-size: 2rem;
+	font-size: 3rem;
 	font-weight: 800;
 	align-self: center;
 }
