--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ a {
 
 @media screen and (max-width: 1560px) {
 	div.siteContainer {
-		grid-template-columns: 360px 1fr 0px;
+		grid-template-columns: minmax(18vw, 270px) 1fr 0px;
 	}
 	div.sideContentContainer {
 		display: none;
@@ -84,7 +84,7 @@ a {
 
 @media screen and (max-width: 720px) {
 	div.siteContainer {
-		grid-template-columns: 0px 1fr 0px;
+		grid-template-columns: 0px 100vw 0px;
 		grid-template-rows: 90px 1fr;
 	}
 	div.headerContainer {
@@ -100,11 +100,14 @@ a {
 		display: none;
 	}
 	div.contentContainer {
-		grid-template-columns: 70vw;
+		grid-template-columns: 85vw;
 	}
 }
 
-
+.sidebarCardIcon {
+	width: 48px;
+	height: 48px;
+}
 
 body {
 	font-family: 'roboto';
@@ -112,9 +115,8 @@ body {
 }
 
 .siteContainer {
-	height: 100vh;
 	display: grid;
-	grid-template-columns: minmax(360px, 360px) 1fr minmax(350px, 400px);
+	grid-template-columns: minmax(15vw, 270px) 1fr minmax(350px, 20vw);
 	grid-template-rows: minmax(168px, 168px) 1fr 1fr;
 }
 
@@ -123,10 +125,10 @@ body {
 	grid-row-end: 4;
 	background-color: var(--green);
 	display: grid;
-	grid-template-rows: repeat(12, 88px);
+	grid-template-rows: repeat(12, clamp(44px, 5vh, 60px));
 	grid-template-columns: 64px 1fr;
 	align-items: end;
-	padding-left: 32px;
+	padding-left: 16px;
 	padding-top: 32px;
 }
 
@@ -148,16 +150,16 @@ body {
 	overflow: auto;
 	padding: 32px;
 	gap: 32px;
-	grid-template-columns: repeat(auto-fill, clamp(340px, 20vw, 380px));
-	grid-template-rows: 24px repeat(auto-fill, clamp(280px, 33%, 320px));
+	grid-template-columns: repeat(auto-fill, clamp(280px, 18vw, 25vw));
+	grid-template-rows: 24px repeat(auto-fill, clamp(280px, 18vh, 25vh));
 	box-shadow: inset 0 5px 5px -1px #888888, inset 5px 0 5px -1px #888888;
 }
 
 .sideContentContainer {
 	grid-area: 2 / 3 / 4 / 4;
 	display: grid;
-	grid-template-rows: 32px 1fr 64px 1fr;
-	padding: 32px;
+	grid-template-rows: 3rem 35vh 3rem 30vh;
+	padding: 16px;
 	min-height: 750px;
 	overflow: hidden;
 	background-color: var(--grey);
@@ -175,7 +177,7 @@ align-self: flex-start;
 
 .announcementsContainer{
 	background-color: var(--green);
-	padding: 32px;
+	padding: 1rem;
 	border-radius: 16px;
 	box-shadow: 0 4px 0 var(--red), 5px 10px 8px #888888;
 
@@ -285,8 +287,8 @@ button:hover {
 }
 
 p {
-	font-size: 2.4rem;
-	margin-bottom: 12px;
+	font-size: 1.6rem;
+
 }
 
 h2 {
@@ -307,15 +309,15 @@ max-width: 60px;
 .userIconMain {
 	border-radius: 50%;
 	overflow: hidden;
-	max-width: 80px;
-	max-height: 80px;
+	max-width: 4rem;
+	max-height: 4rem;
 	grid-area: 1 / 1 / 3 / 2;
 	align-self: center;
 	}
 
 
 h1 {
-	font-size: 3rem;
+	font-size: 2.4rem;
 	font-weight: 800;
 	align-self: center;
 }
@@ -337,7 +339,7 @@ h4{
 }
 
 li > p{
-	font-size: 1.2rem;
+	font-size: 1rem;
 }
 
 .card {
@@ -357,12 +359,11 @@ li > p{
 
 .sidebarItem {
 	display: contents;
+	align-items: center;
 }
 
-.sidebarIcon {
-	align-self: flex-end;
-	margin-top: 32px;
-}
+
+	
 .sidebarIcon:hover {
 	filter: invert(81%) sepia(53%) saturate(579%) hue-rotate(346deg) brightness(101%) contrast(94%);;
 }
@@ -377,6 +378,7 @@ li > p{
 
 .cardPara {
 	justify-self: flex-start;
+	font-size: 1rem;
 }
 
 
